[tool.poetry]
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
description = "A weird JSON importer"
license = "MIT"
name = "jimp"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.10-beta.0", allow-prereleases = true}
ipython = "^7.13"
pre-commit = {version = "^2.0"}
pylint = "^2.4"
pytest = {version = "^6.0"}
pytest-cov = "^2.10.0"
flake8 = "^4.0.1"
isort = "^5.9.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov=jimp
    --cov-report term-missing:skip-covered
    --doctest-modules
"""

minversion = "6.0"
testpaths = [
  "tests",
]
